# cloakbrowser-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml  server.json  setup.sh
.github/workflows/: ci.yml
cloakbrowsermcp/: server.py  session.py  snapshot.py  vision.py
docker/: entrypoint.sh
docs/: AI_AGENT_GUIDE.md  CONFIGURATION.md  DEPLOYMENT.md  TOOLS.md  TROUBLESHOOTING.md  UPSTREAM_NOTES.md
examples/: basic_agent_flow.md  claude_desktop_config.json  cursor_mcp_config.json  docker_usage.md  local_usage.md  vscode_mcp_config.json
src/cloakbrowser_mcp/: __init__.py  __main__.py  browser.py  config.py  healthcheck.py  logging.py  server.py  session.py  tools.py  utils.py
tests/: test_basic_browser_flow.py  test_concurrency.py  test_config.py  test_docker_smoke.py  test_healthcheck.py  test_lifespan.py  test_pages.py  test_reaper.py  test_retry.py  test_screenshot.py  test_server.py  test_session.py  test_storage_state.py  test_tools_schema.py  test_truncation.py
